# lightweighttools

./: .gitignore  LICENSE  README.md
codestandard/codestandardcli/: .gitignore  pyproject.toml
codestandard/codestandardcli/src/codestandard/: cli.py
codestandard/codestandardcli/src/codestandard/installer/: base.py  claude.py  codex.py  cursor.py
codestandard/codestandardcli/src/codestandard/installers/: SKILL.md  base.py  claude.py  codex.py  cursor.py
codestandard/codestandardcli/src/codestandard/reference/: java_google_rules.md  python_pep8_rule.md
codestandard/integrations/claude-skill/: SKILL.md
codestandard/integrations/claude-skill/skills/claude-code-standard-skill/: SKILL.md  rules.md
codestandard/integrations/codex-code-standard-plugin/.codex-plugin/: plugin.json
codestandard/integrations/codex-code-standard-plugin/skills/java-alibaba-standard/: SKILL.md
